--- a/NameValueCollectionMapper.Test/Collection2Model.Test.csproj
+++ b/NameValueCollectionMapper.Test/Collection2Model.Test.csproj
@@ -54,9 +54,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NemeValueCollectionMapper\NemeValueCollectionMapper.csproj">
+    <ProjectReference Include="..\NemeValueCollectionMapper\Collection2Model.csproj">
       <Project>{1f1612f6-08ec-4515-863d-74a61721b6e9}</Project>
-      <Name>NemeValueCollectionMapper</Name>
+      <Name>Collection2Model</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
