--- a/NemeValueCollectionMapper/Collection2Model.csproj
+++ b/NemeValueCollectionMapper/Collection2Model.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IgnorePropertyAttribute.cs" />
     <Compile Include="Mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
